<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.datastore.DataStoreDataStoreMigrationActivity">

    <EditText
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minWidth="300dp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/save_old_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Old Data"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/load_migrated_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Load Migrated"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        tools:ignore="HardcodedText"
        tools:text="Status" />
</LinearLayout>
